# serenity-bot

./: .env  .env.example  .gitignore  Cargo.toml  README.md
src/: main.rs
src/events/: message.rs  ready.rs  slash_command.rs
